# CursorRIPER

./: .gitignore  @symbol_improvment_readme.md  Code_Protection_System_readme.md  DEPLOY_N150_MANUAL.md  ESTRUTURA_COMPLETA.md  FASE2_RESUMO.md  PIPELINE_VALIDACAO_COMPLETO.md  README.md  RESUMO_CRIACAO.md  TESTE_FILTRO_TENDENCIA_RELATORIO.md  VALIDACAO_FINAL_COMPLETA.md  analyze_smoke_test.py  check_dates.py  check_full_data_range.py  check_last_date.py  commit_msg.txt  commit_msg2.txt  compara.ps1  compare_6months.py  compare_full_history.py  compare_month_results.py  compare_month_warmup.py  compare_month_warmup_v2.py  compare_week_results.py  converter_csv_para_parquet.py  create_6months_dataset.py  create_full_dataset.py  create_month_dataset.py  create_month_dataset_with_warmup.py  create_validation_dataset.py  create_week_dataset.py  debug_missing_trade.py  debug_missing_trades.py  debug_python_signals.py  debug_rust_detection.py  debug_rust_signals.py  debug_trade_divergence.py  deploy_n150_completo.ps1  estrutura_tree.txt  identify_best_config.py  (+27 more)
core/: analise_temporal.py  data_loader.py  metrics.py  optimizer.py  optimizer_concurrent.py  strategy_base.py  trend_filter.py  trend_filter_v2.py  trend_filter_v3.py  trend_filter_v4.py  trend_filter_v5.py  trend_filter_v6.py  (+1 more)
engines/rust/: ARQUITETURA.md  COMO_USAR.md  Cargo.toml  README.md  YAML_SYSTEM.md  build.ps1
engines/rust/examples/: test_100k_candles.rs  test_multicore.rs  test_multicore_pesado.rs
engines/rust/src/: backtest_engine.rs  lib.rs  metrics.rs  optimizer.rs  strategy.rs  types.rs
(+173 files in other folders)
