[package]
name = "engine_rust"
version = "1.0.0"
edition = "2021"

[lib]
name = "engine_rust"
crate-type = ["cdylib", "rlib"]  # rlib para permitir uso por binarios

[[bin]]
name = "optimize_standalone"
path = "src/bin/optimize_standalone.rs"

[[bin]]
name = "optimize_batches"
path = "src/bin/optimize_batches.rs"

[[bin]]
name = "optimize_threads"
path = "src/bin/optimize_threads.rs"

[[bin]]
name = "validate_single"
path = "src/bin/validate_single.rs"

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
numpy = { version = "0.23", optional = true }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = { version = "0.17", features = ["rayon"] }
polars = { version = "0.45", features = ["lazy", "parquet"] }
csv = "1.3"
chrono = "0.4"

[features]
default = ["python"]
python = ["pyo3", "numpy"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
